--- a/gpt_from_scratch.ipynb
+++ b/gpt_from_scratch.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# imports \n",
+    "import torch \n",
+    "import torch.nn as nn\n",
+    "from torch.nn import functional as F"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
@@ -13,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +34,7 @@
        "'length of dataset (characters): 1115394'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -87,6 +99,351 @@
    "source": [
     "# first 1000 characters\n",
     "print(text[:1000])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " !$&',-.3:;?ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'vocabulary size: 65'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# unique characters that occur in this text\n",
+    "chars = sorted(list(set(text)))\n",
+    "vocab_size = len(chars)\n",
+    "print(''.join(chars))\n",
+    "f'vocabulary size: {vocab_size}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([46, 47, 1, 58, 46, 43, 56, 43], 'hi there')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# characters mapping to integers \n",
+    "stoi = {ch: i for i, ch in enumerate(chars)}  # create a dictionary that maps characters to their integer indices\n",
+    "itos = {i: ch for i, ch in enumerate(chars)}  # create a dictionary that maps integer indices to their corresponding characters\n",
+    "def encode(s):\n",
+    "    return [stoi[c] for c in s]  # function to encode a string into a list of integers  \n",
+    "def decode(encoded_list):\n",
+    "    return \"\".join(\n",
+    "        itos[i] for i in encoded_list\n",
+    "    )  # function to decode a list of integers into a string\n",
+    "\n",
+    "\n",
+    "encode('hi there'), decode(encode('hi there'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([1115394]),\n",
+       " torch.int64,\n",
+       " tensor([18, 47, 56, 57, 58,  1, 15, 47, 58, 47, 64, 43, 52, 10,  0, 14, 43, 44,\n",
+       "         53, 56, 43,  1, 61, 43,  1, 54, 56, 53, 41, 43, 43, 42,  1, 39, 52, 63,\n",
+       "          1, 44, 59, 56, 58, 46, 43, 56,  6,  1, 46, 43, 39, 56,  1, 51, 43,  1,\n",
+       "         57, 54, 43, 39, 49,  8,  0,  0, 13, 50, 50, 10,  0, 31, 54, 43, 39, 49,\n",
+       "          6,  1, 57, 54, 43, 39, 49,  8,  0,  0, 18, 47, 56, 57, 58,  1, 15, 47,\n",
+       "         58, 47, 64, 43, 52, 10,  0, 37, 53, 59,  1, 39, 56, 43,  1, 39, 50, 50,\n",
+       "          1, 56, 43, 57, 53, 50, 60, 43, 42,  1, 56, 39, 58, 46, 43, 56,  1, 58,\n",
+       "         53,  1, 42, 47, 43,  1, 58, 46, 39, 52,  1, 58, 53,  1, 44, 39, 51, 47,\n",
+       "         57, 46, 12,  0,  0, 13, 50, 50, 10,  0, 30, 43, 57, 53, 50, 60, 43, 42,\n",
+       "          8,  1, 56, 43, 57, 53, 50, 60, 43, 42,  8,  0,  0, 18, 47, 56, 57, 58,\n",
+       "          1, 15, 47, 58, 47, 64, 43, 52, 10,  0, 18, 47, 56, 57, 58,  6,  1, 63,\n",
+       "         53, 59,  1, 49, 52, 53, 61,  1, 15, 39, 47, 59, 57,  1, 25, 39, 56, 41,\n",
+       "         47, 59, 57,  1, 47, 57,  1, 41, 46, 47, 43, 44,  1, 43, 52, 43, 51, 63,\n",
+       "          1, 58, 53,  1, 58, 46, 43,  1, 54, 43, 53, 54, 50, 43,  8,  0,  0, 13,\n",
+       "         50, 50, 10,  0, 35, 43,  1, 49, 52, 53, 61,  5, 58,  6,  1, 61, 43,  1,\n",
+       "         49, 52, 53, 61,  5, 58,  8,  0,  0, 18, 47, 56, 57, 58,  1, 15, 47, 58,\n",
+       "         47, 64, 43, 52, 10,  0, 24, 43, 58,  1, 59, 57,  1, 49, 47, 50, 50,  1,\n",
+       "         46, 47, 51,  6,  1, 39, 52, 42,  1, 61, 43,  5, 50, 50,  1, 46, 39, 60,\n",
+       "         43,  1, 41, 53, 56, 52,  1, 39, 58,  1, 53, 59, 56,  1, 53, 61, 52,  1,\n",
+       "         54, 56, 47, 41, 43,  8,  0, 21, 57,  5, 58,  1, 39,  1, 60, 43, 56, 42,\n",
+       "         47, 41, 58, 12,  0,  0, 13, 50, 50, 10,  0, 26, 53,  1, 51, 53, 56, 43,\n",
+       "          1, 58, 39, 50, 49, 47, 52, 45,  1, 53, 52,  5, 58, 11,  1, 50, 43, 58,\n",
+       "          1, 47, 58,  1, 40, 43,  1, 42, 53, 52, 43, 10,  1, 39, 61, 39, 63,  6,\n",
+       "          1, 39, 61, 39, 63,  2,  0,  0, 31, 43, 41, 53, 52, 42,  1, 15, 47, 58,\n",
+       "         47, 64, 43, 52, 10,  0, 27, 52, 43,  1, 61, 53, 56, 42,  6,  1, 45, 53,\n",
+       "         53, 42,  1, 41, 47, 58, 47, 64, 43, 52, 57,  8,  0,  0, 18, 47, 56, 57,\n",
+       "         58,  1, 15, 47, 58, 47, 64, 43, 52, 10,  0, 35, 43,  1, 39, 56, 43,  1,\n",
+       "         39, 41, 41, 53, 59, 52, 58, 43, 42,  1, 54, 53, 53, 56,  1, 41, 47, 58,\n",
+       "         47, 64, 43, 52, 57,  6,  1, 58, 46, 43,  1, 54, 39, 58, 56, 47, 41, 47,\n",
+       "         39, 52, 57,  1, 45, 53, 53, 42,  8,  0, 35, 46, 39, 58,  1, 39, 59, 58,\n",
+       "         46, 53, 56, 47, 58, 63,  1, 57, 59, 56, 44, 43, 47, 58, 57,  1, 53, 52,\n",
+       "          1, 61, 53, 59, 50, 42,  1, 56, 43, 50, 47, 43, 60, 43,  1, 59, 57, 10,\n",
+       "          1, 47, 44,  1, 58, 46, 43, 63,  0, 61, 53, 59, 50, 42,  1, 63, 47, 43,\n",
+       "         50, 42,  1, 59, 57,  1, 40, 59, 58,  1, 58, 46, 43,  1, 57, 59, 54, 43,\n",
+       "         56, 44, 50, 59, 47, 58, 63,  6,  1, 61, 46, 47, 50, 43,  1, 47, 58,  1,\n",
+       "         61, 43, 56, 43,  0, 61, 46, 53, 50, 43, 57, 53, 51, 43,  6,  1, 61, 43,\n",
+       "          1, 51, 47, 45, 46, 58,  1, 45, 59, 43, 57, 57,  1, 58, 46, 43, 63,  1,\n",
+       "         56, 43, 50, 47, 43, 60, 43, 42,  1, 59, 57,  1, 46, 59, 51, 39, 52, 43,\n",
+       "         50, 63, 11,  0, 40, 59, 58,  1, 58, 46, 43, 63,  1, 58, 46, 47, 52, 49,\n",
+       "          1, 61, 43,  1, 39, 56, 43,  1, 58, 53, 53,  1, 42, 43, 39, 56, 10,  1,\n",
+       "         58, 46, 43,  1, 50, 43, 39, 52, 52, 43, 57, 57,  1, 58, 46, 39, 58,  0,\n",
+       "         39, 44, 44, 50, 47, 41, 58, 57,  1, 59, 57,  6,  1, 58, 46, 43,  1, 53,\n",
+       "         40, 48, 43, 41, 58,  1, 53, 44,  1, 53, 59, 56,  1, 51, 47, 57, 43, 56,\n",
+       "         63,  6,  1, 47, 57,  1, 39, 57,  1, 39, 52,  0, 47, 52, 60, 43, 52, 58,\n",
+       "         53, 56, 63,  1, 58, 53,  1, 54, 39, 56, 58, 47, 41, 59, 50, 39, 56, 47,\n",
+       "         57, 43,  1, 58, 46, 43, 47, 56,  1, 39, 40, 59, 52, 42, 39, 52, 41, 43,\n",
+       "         11,  1, 53, 59, 56,  0, 57, 59, 44, 44, 43, 56, 39, 52, 41, 43,  1, 47,\n",
+       "         57,  1, 39,  1, 45, 39, 47, 52,  1, 58, 53,  1, 58, 46, 43, 51,  1, 24,\n",
+       "         43, 58,  1, 59, 57,  1, 56, 43, 60, 43, 52, 45, 43,  1, 58, 46, 47, 57,\n",
+       "          1, 61, 47, 58, 46,  0, 53, 59, 56,  1, 54, 47, 49, 43, 57,  6,  1, 43,\n",
+       "         56, 43,  1, 61, 43,  1, 40, 43, 41, 53, 51, 43,  1, 56, 39, 49, 43, 57,\n",
+       "         10,  1, 44, 53, 56,  1, 58, 46, 43,  1, 45, 53, 42, 57,  1, 49, 52, 53,\n",
+       "         61,  1, 21,  0, 57, 54, 43, 39, 49,  1, 58, 46, 47, 57,  1, 47, 52,  1,\n",
+       "         46, 59, 52, 45, 43, 56,  1, 44, 53, 56,  1, 40, 56, 43, 39, 42,  6,  1,\n",
+       "         52, 53, 58,  1, 47, 52,  1, 58, 46, 47, 56, 57, 58,  1, 44, 53, 56,  1,\n",
+       "         56, 43, 60, 43, 52, 45, 43,  8,  0,  0]))"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# encode the entire dataset using pytorch \n",
+    "data = torch.tensor(encode(text), dtype=torch.long) # encode the text into tensor of long integers\n",
+    "\n",
+    "data.shape, data.dtype, data[:1000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train & validation split \n",
+    "n = int(0.9 * len(data)) \n",
+    "train_data = data[:n]\n",
+    "valid_data = data[n:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([18, 47, 56, 57, 58,  1, 15, 47, 58])\n",
+      "\n",
+      "\n",
+      "when input is tensor([18]), the target is 47\n",
+      "when input is tensor([18, 47]), the target is 56\n",
+      "when input is tensor([18, 47, 56]), the target is 57\n",
+      "when input is tensor([18, 47, 56, 57]), the target is 58\n",
+      "when input is tensor([18, 47, 56, 57, 58]), the target is 1\n",
+      "when input is tensor([18, 47, 56, 57, 58,  1]), the target is 15\n",
+      "when input is tensor([18, 47, 56, 57, 58,  1, 15]), the target is 47\n",
+      "when input is tensor([18, 47, 56, 57, 58,  1, 15, 47]), the target is 58\n"
+     ]
+    }
+   ],
+   "source": [
+    "# a sequence of text with block_size + 1 characters\n",
+    "block_size = 8\n",
+    "print(train_data[:block_size + 1])\n",
+    "print('\\n')\n",
+    "\n",
+    "x = train_data[:block_size]\n",
+    "y = train_data[1:block_size + 1]\n",
+    "\n",
+    "for t in range(block_size):\n",
+    "    context = x[:t + 1]\n",
+    "    target = y[t]\n",
+    "    print(f'when input is {context}, the target is {target}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "inputs:\n",
+      "torch.Size([4, 8])\n",
+      "tensor([[46, 47, 51, 12,  0,  0, 15, 20],\n",
+      "        [58, 53,  1, 59, 57, 43,  1, 47],\n",
+      "        [46,  1, 63, 53, 59,  1, 61, 43],\n",
+      "        [42, 39, 63, 57,  5,  1, 56, 43]])\n",
+      "targets:\n",
+      "torch.Size([4, 8])\n",
+      "tensor([[47, 51, 12,  0,  0, 15, 20, 30],\n",
+      "        [53,  1, 59, 57, 43,  1, 47, 58],\n",
+      "        [ 1, 63, 53, 59,  1, 61, 43, 56],\n",
+      "        [39, 63, 57,  5,  1, 56, 43, 57]])\n",
+      "----\n",
+      "when input is [46] the target: 47\n",
+      "when input is [46, 47] the target: 51\n",
+      "when input is [46, 47, 51] the target: 12\n",
+      "when input is [46, 47, 51, 12] the target: 0\n",
+      "when input is [46, 47, 51, 12, 0] the target: 0\n",
+      "when input is [46, 47, 51, 12, 0, 0] the target: 15\n",
+      "when input is [46, 47, 51, 12, 0, 0, 15] the target: 20\n",
+      "when input is [46, 47, 51, 12, 0, 0, 15, 20] the target: 30\n",
+      "when input is [58] the target: 53\n",
+      "when input is [58, 53] the target: 1\n",
+      "when input is [58, 53, 1] the target: 59\n",
+      "when input is [58, 53, 1, 59] the target: 57\n",
+      "when input is [58, 53, 1, 59, 57] the target: 43\n",
+      "when input is [58, 53, 1, 59, 57, 43] the target: 1\n",
+      "when input is [58, 53, 1, 59, 57, 43, 1] the target: 47\n",
+      "when input is [58, 53, 1, 59, 57, 43, 1, 47] the target: 58\n",
+      "when input is [46] the target: 1\n",
+      "when input is [46, 1] the target: 63\n",
+      "when input is [46, 1, 63] the target: 53\n",
+      "when input is [46, 1, 63, 53] the target: 59\n",
+      "when input is [46, 1, 63, 53, 59] the target: 1\n",
+      "when input is [46, 1, 63, 53, 59, 1] the target: 61\n",
+      "when input is [46, 1, 63, 53, 59, 1, 61] the target: 43\n",
+      "when input is [46, 1, 63, 53, 59, 1, 61, 43] the target: 56\n",
+      "when input is [42] the target: 39\n",
+      "when input is [42, 39] the target: 63\n",
+      "when input is [42, 39, 63] the target: 57\n",
+      "when input is [42, 39, 63, 57] the target: 5\n",
+      "when input is [42, 39, 63, 57, 5] the target: 1\n",
+      "when input is [42, 39, 63, 57, 5, 1] the target: 56\n",
+      "when input is [42, 39, 63, 57, 5, 1, 56] the target: 43\n",
+      "when input is [42, 39, 63, 57, 5, 1, 56, 43] the target: 57\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "This code snippet is initializing variables and defining a function to generate batches of training data for a neural network model.\n",
+    "\n",
+    "The purpose is to create batches of input data x and target output data y to train the model. It takes no explicit inputs. The key outputs are:\n",
+    "\n",
+    "xb - a batch of input data\n",
+    "yb - the target outputs corresponding to xb\n",
+    "It achieves this by first setting some hyperparameters:\n",
+    "\n",
+    "batch_size - the number of data sequences in each batch\n",
+    "block_size - the maximum length of each sequence\n",
+    "It then defines a get_batch() function that takes a 'train' or 'val' split. This function samples random start indices ix from the full dataset, extracts sequences of length block_size starting from those indices, and stacks them into the x and y tensors.\n",
+    "\n",
+    "The key logic flow is:\n",
+    "\n",
+    "Sample random indices\n",
+    "Slice sequences of block_size from the dataset at those indices\n",
+    "Stack the sequences into batches x and y\n",
+    "This creates batches of data for training or validation, where y are the target outputs for input sequences x. The batches contain multiple independent sequences of limited length.\n",
+    "\n",
+    "Finally, the function is called to generate a sample batch and print out the shape and values, showing how the batches are constructed.\n",
+    "\n",
+    "'''\n",
+    "torch.manual_seed(19)\n",
+    "batch_size = 4 # number of sequences in a batch\n",
+    "block_size = 8 # maximum length of each sequence\n",
+    "\n",
+    "def get_batch(split):\n",
+    "    # generate a small batch of data of inputs x and targets y\n",
+    "    data = train_data if split == 'train' else val_data\n",
+    "    ix = torch.randint(len(data) - block_size, (batch_size,))\n",
+    "    x = torch.stack([data[i: i + block_size] for i in ix])\n",
+    "    y = torch.stack([data[i + 1: i + block_size + 1] for i in ix])\n",
+    "    return x, y\n",
+    "\n",
+    "xb, yb = get_batch('train')\n",
+    "print('inputs:')\n",
+    "print(xb.shape)\n",
+    "print(xb)\n",
+    "print('targets:')\n",
+    "print(yb.shape)\n",
+    "print(yb)\n",
+    "\n",
+    "print('----')\n",
+    "\n",
+    "for b in range(batch_size): # batch dimension\n",
+    "    for t in range(block_size): # time dimension\n",
+    "        context = xb[b, :t+1]\n",
+    "        target = yb[b,t]\n",
+    "        print(f\"when input is {context.tolist()} the target: {target}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[46, 47, 51, 12,  0,  0, 15, 20],\n",
+       "        [58, 53,  1, 59, 57, 43,  1, 47],\n",
+       "        [46,  1, 63, 53, 59,  1, 61, 43],\n",
+       "        [42, 39, 63, 57,  5,  1, 56, 43]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# transformer input\n",
+    "xb "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.manual_seed(19)\n",
+    "\n",
+    "class BigramLanguageModel(nn.Module):\n",
+    "    \n",
+    "    def __init__(self, vocab_size):\n",
+    "        super().__init__()\n",
+    "        self.token_embedding_table = nn.Embedding(vocab_size, vocab_size) # each token directly reads off the logits for the next token from a lookup table        \n",
+    "        \n",
+    "    # def forward()\n",
+    "    "
    ]
   },
   {
