--- a/gpt_from_scratch.ipynb
+++ b/gpt_from_scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        "'length of dataset (characters): 1115394'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "'vocabulary size: 65'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "([46, 47, 1, 58, 46, 43, 56, 43], 'hi there')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "         56, 43, 60, 43, 52, 45, 43,  8,  0,  0]))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
        "        [42, 39, 63, 57,  5,  1, 56, 43]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,10 +430,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([32, 65]) tensor(4.3980, grad_fn=<NllLossBackward0>)\n",
+      "\n",
+      ":cbLBGX-MdeSk'3CsuzLimNwPIYn$3K nndyjMuwNZLevgLy-BlR?&o-;dg&.sq;jvglXECDZFWZL\n",
+      "iTjB!QCE&GESiXEkPaED-o\n"
+     ]
+    }
+   ],
    "source": [
+    "'''\n",
+    "This code defines a BigramLanguageModel class which implements a simple bigram language model in PyTorch.\n",
+    "\n",
+    "The BigramLanguageModel takes a vocab_size as input, which is the total number of unique tokens in the vocabulary.\n",
+    "\n",
+    "In the init method, it creates an nn.Embedding layer called token_embedding_table. This layer will store embeddings for each token in the vocab. When passed an input tensor of token indices, it will look up the embedding for those tokens.\n",
+    "\n",
+    "The forward method takes idx and targets as inputs. idx is a tensor of token indices representing the current sequence. targets is the target tokens we want to predict.\n",
+    "\n",
+    "Inside forward, it looks up the embeddings for idx using the token_embedding_table. This produces a tensor of shape (B, T, C) where B is batch size, T is sequence length, and C is embedding size.\n",
+    "\n",
+    "If targets is None, it doesn't calculate loss. Otherwise, it reshapes the logits and targets to (BT, C) and (BT) respectively. It then calculates cross entropy loss between the logits and targets.\n",
+    "\n",
+    "The generate method takes idx and max_new_tokens as input. It generates new token indices autoregressively by repeatedly sampling the next token from the model's predictions. The sampled tokens are appended to idx so the sequence grows longer over time.\n",
+    "\n",
+    "Overall, this BigramLanguageModel produces logits for next token prediction based on an embedding lookup table. The forward method calculates loss if targets are provided. The generate method incrementally expands idx by sampling from the model's predictions.\n",
+    "'''\n",
     "torch.manual_seed(19)\n",
     "\n",
     "class BigramLanguageModel(nn.Module):\n",
@@ -442,8 +470,147 @@
     "        super().__init__()\n",
     "        self.token_embedding_table = nn.Embedding(vocab_size, vocab_size) # each token directly reads off the logits for the next token from a lookup table        \n",
     "        \n",
-    "    # def forward()\n",
+    "    def forward(self, idx, targets=None):\n",
+    "                \n",
+    "        # idx and targets are both (B, T) tensor of integers \n",
+    "        logits = self.token_embedding_table(idx)  # (B, T, C)\n",
+    "        \n",
+    "        if targets is None:\n",
+    "            loss = None\n",
+    "        else:\n",
+    "            B, T, C = logits.shape\n",
+    "            logits = logits.view(B*T, C)\n",
+    "            targets = targets.view(B*T)\n",
+    "            loss = F.cross_entropy(logits, targets)\n",
+    "                 \n",
+    "        return logits, loss \n",
+    "    \n",
+    "    def generate(self, idx, max_new_tokens):\n",
+    "        # idx is (B, T) array of indices in the current context\n",
+    "        for _ in range(max_new_tokens):\n",
+    "            # get the predictions\n",
+    "            logits, _ = self(idx)\n",
+    "            # focus only only on the last time step\n",
+    "            logits = logits[:, -1, :]\n",
+    "            # apply softmax to get probabilities \n",
+    "            probs = F.softmax(logits, dim=-1)  # (B, C)\n",
+    "            # sample from distribution \n",
+    "            idx_next = torch.multinomial(probs, num_samples=1)  # (B, 1)\n",
+    "            # append sampled index to the running sequence\n",
+    "            idx = torch.cat((idx, idx_next), dim=1)  # (B, T+1)\n",
+    "        return idx\n",
+    "    \n",
+    "m = BigramLanguageModel(vocab_size)\n",
+    "logits, loss = m(xb, yb)\n",
+    "print(logits.shape, loss)\n",
+    "print(decode(m.generate(idx = torch.zeros(1, 1, dtype=torch.long), max_new_tokens=100)[0].tolist()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a PyTorch optimizer \n",
+    "optimizer = torch.optim.Adam(m.parameters(), lr=1e-3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.591012716293335\n"
+     ]
+    }
+   ],
+   "source": [
+    "# train the model\n",
+    "batch_size = 32\n",
+    "\n",
+    "for steps in range(10000):\n",
+    "    \n",
+    "    # sample a batch fo data \n",
+    "    xb, yb = get_batch('train')\n",
+    "    \n",
+    "    # evaluate the loss \n",
+    "    logits, loss = m(xb, yb)\n",
+    "    optimizer.zero_grad(set_to_none=True)\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "    \n",
+    "print(loss.item())\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "An hershake ea seiresorng'sh n ghad; wo, w Vorme hofont t on s arot, w were buathile w: me ORAUCUCK\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(decode(m.generate(idx = torch.zeros(1, 1, dtype=torch.long), max_new_tokens=100)[0].tolist()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The mathematical trick in self-attention"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 8, 2])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# consider the following toy example\n",
+    "torch.manual_seed(19)\n",
+    "\n",
+    "B, T, C = 4, 8, 2  # batch, time, channels \n",
+    "x = torch.randn(B, T, C)\n",
+    "x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# we want x[b, t] = mean_{i<=t} x[b, i]\n",
+    "xbow = torch.zeros((B, T, C))\n",
+    "for b in range(B):\n",
+    "    for t in range(T):\n",
+    "        xprev = x[b, :t+1]  #(t, C)\n",
+    "        xbow[b, t] = torch.mean(xprev, 0)"
    ]
   },
   {
