--- a/gpt_from_scratch.ipynb
+++ b/gpt_from_scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        "'length of dataset (characters): 1115394'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "'vocabulary size: 65'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "([46, 47, 1, 58, 46, 43, 56, 43], 'hi there')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "         56, 43, 60, 43, 52, 45, 43,  8,  0,  0]))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
        "        [42, 39, 63, 57,  5,  1, 56, 43]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,14 +518,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.591012716293335\n"
+      "2.5062553882598877\n"
      ]
     }
    ],
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -558,8 +558,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\n",
-      "An hershake ea seiresorng'sh n ghad; wo, w Vorme hofont t on s arot, w were buathile w: me ORAUCUCK\n"
+      "Patrt CE: ureve;\n",
+      "Smithen:\n",
+      "PHibithen u'dofeel tuget styo. tise wh tho pll ode haiuriketwthenobe at'ee\n"
      ]
     }
    ],
@@ -576,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +586,7 @@
        "torch.Size([4, 8, 2])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,6 +612,120 @@
     "    for t in range(T):\n",
     "        xprev = x[b, :t+1]  #(t, C)\n",
     "        xbow[b, t] = torch.mean(xprev, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Compute the attention weights\n",
+    "wei = torch.tril(torch.ones(T, T))\n",
+    "wei = wei / wei.sum(1, keepdim=True)\n",
+    "xbow2 = wei @ x   # (B, T, T) @ (B, T, C) ---> (B, T, C)\n",
+    "torch.allclose(xbow, xbow2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Compute the attention weights another version\n",
+    "tril = torch.tril(torch.ones(T, T))\n",
+    "wei = torch.zeros((T, T))\n",
+    "wei = wei.masked_fill(tril == 0, float('-inf'))\n",
+    "wei = F.softmax(wei, dim=-1)\n",
+    "xbow3 = wei @ x \n",
+    "torch.allclose(xbow, xbow3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute the attention weights another another version\n",
+    "\"\"\"\n",
+    "This computes the attention weights by doing a softmax over the \n",
+    "query-key dot product.\n",
+    "\"\"\"\n",
+    "\n",
+    "torch.manual_seed(19)\n",
+    "B, T, C = 4, 8, 32  #batch_size, time, channels \n",
+    "x = torch.randn(B, T, C)\n",
+    "\n",
+    "# let's see a single Head perform self-attention \n",
+    "head_size = 16\n",
+    "key = nn.Linear(C, head_size, bias=False)\n",
+    "query = nn.Linear(C, head_size, bias=False)\n",
+    "value = nn.Linear(C, head_size, bias=False)\n",
+    "k = key(x)  # (B, T, head_size)\n",
+    "q = query(x)  # (B, T, head_size)\n",
+    "wei = q @ k.transpose(-2, -1)  # (B, T, T)\n",
+    "\n",
+    "tril = torch.tril(torch.ones(T, T))\n",
+    "#wei = torch.zeros((T, T))\n",
+    "wei = wei.masked_fill(tril == 0, float('-inf'))\n",
+    "wei = F.softmax(wei, dim=-1)\n",
+    "out = wei @ x \n",
+    "\n",
+    "v = value(x)  # (B, T, head_size)\n",
+    "out = wei @ v\n",
+    "#out = wei @ x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.7277, 0.2723, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.8779, 0.0974, 0.0247, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.0788, 0.2929, 0.4735, 0.1548, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.0031, 0.0430, 0.0240, 0.0775, 0.8524, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.0240, 0.4843, 0.0357, 0.1389, 0.2536, 0.0635, 0.0000, 0.0000],\n",
+       "        [0.1118, 0.0882, 0.1059, 0.3468, 0.0469, 0.1041, 0.1963, 0.0000],\n",
+       "        [0.1241, 0.0265, 0.3420, 0.0179, 0.1015, 0.2724, 0.0183, 0.0972]],\n",
+       "       grad_fn=<SelectBackward0>)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wei[0]"
    ]
   },
   {
