--- a/gpt_from_scratch.ipynb
+++ b/gpt_from_scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        "'length of dataset (characters): 1115394'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "'vocabulary size: 65'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "([46, 47, 1, 58, 46, 43, 56, 43], 'hi there')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "         56, 43, 60, 43, 52, 45, 43,  8,  0,  0]))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
        "        [42, 39, 63, 57,  5,  1, 56, 43]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
        "torch.Size([4, 8, 2])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +625,7 @@
        "True"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +649,7 @@
        "True"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +719,7 @@
        "       grad_fn=<SelectBackward0>)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,10 +730,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([32, 100])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class BatchNorm1d: \n",
+    "    \n",
+    "    def __init__(self, dim, eps=1e-5, momentum=0.1):\n",
+    "        self.eps = eps\n",
+    "        self.momentum = momentum\n",
+    "        self.training = True\n",
+    "        # parameters (trained with backprop)\n",
+    "        self.gamma = torch.ones(dim)\n",
+    "        self.beta = torch.zeros(dim)\n",
+    "        # buffers (trained with a running 'momentum update')\n",
+    "        self.running_mean = torch.zeros(dim)\n",
+    "        self.running_var = torch.ones(dim)\n",
+    "        \n",
+    "    def __call__(self, x):\n",
+    "        # calculate the forward pass\n",
+    "        if self.training:\n",
+    "            # compute batch statistics\n",
+    "            xmean = x.mean(dim=0, keepdim=True)  # batch mean; \n",
+    "            xvar = x.var(dim=0, keepdim=True)  # batch variance \n",
+    "        else:\n",
+    "            # update running statistics\n",
+    "            xmean = self.running_mean\n",
+    "            xvar = self.running_var\n",
+    "        xhat = (x - xmean) / torch.sqrt(xvar + self.eps)  # normalize to unit variance \n",
+    "        self.out = self.gamma * xhat + self.beta  # scale and shift\n",
+    "        # update the buffers \n",
+    "        if self.training:\n",
+    "            self.running_mean = (1 - self.momentum) * self.running_mean + self.momentum * xmean\n",
+    "            self.running_var = (1 - self.momentum) * self.running_var + self.momentum * xvar\n",
+    "        return self.out\n",
+    "    \n",
+    "    def parameters(self):\n",
+    "        return [self.gamma, self.beta]\n",
+    "    \n",
+    "torch.manual_seed(19)\n",
+    "module = BatchNorm1d(100)\n",
+    "x = torch.randn(32, 100)\n",
+    "x = module(x)\n",
+    "x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(0.), tensor(1.0000))"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[:, 0].mean(), x[:, 0].std()  # mean, std of one feature across all batch inputs "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(-0.0994), tensor(0.9421))"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[0, :].mean(), x[0, :].std()  # mean, std of a single imput from batch, of its features "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([32, 100])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class LayerNorm1d:\n",
+    "    def __init__(self, dim, eps=1e-5, momentum=0.1):\n",
+    "        self.eps = eps\n",
+    "        self.gamma = torch.ones(dim)\n",
+    "        self.beta = torch.zeros(dim)\n",
+    "\n",
+    "    def __call__(self, x):\n",
+    "        # calculate the forward pass\n",
+    "        x_mean = x.mean(1, keepdim=True)  # batch mean\n",
+    "        x_var = x.var(1, keepdim=True)  # batch variance\n",
+    "        x_hat = (x - x_mean) / torch.sqrt(x_var + self.eps)  # normalize to unit variance\n",
+    "        self.out = self.gamma * x_hat + self.beta\n",
+    "        return self.out\n",
+    "\n",
+    "    def parameters(self):\n",
+    "        return [self.gamma, self.beta]\n",
+    "\n",
+    "\n",
+    "torch.manual_seed(1337)\n",
+    "module = BatchNorm1d(100)\n",
+    "x = torch.rand(32, 100)  # batch size 32 of 100-dimensional vectors\n",
+    "x = module(x)\n",
+    "x.shape\n"
+   ]
   }
  ],
  "metadata": {
